BAT and CAT cource added

--- a/Course.html
+++ b/Course.html
@@ -8,7 +8,7 @@
   <!-- Meta Tags -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="prospire | Education & Institution" />
+  <meta name="description" content="prospire | Education & Institution" />
   <meta name="keywords" content="academy, course, education, education html theme, #, learning," />
 
 
@@ -103,7 +103,10 @@
                       <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">GST VAT</a>
+                      <a href="404.html">BAT</a>
+                    </li>
+                    <li>
+                      <a href="404.html">CAT</a>
                     </li>
                     <li>
                       <a href="404.html">ACCA IFRS</a>
@@ -178,7 +181,10 @@
                       <li><i class="fa fa-map-marker mr-5"></i>
                         CERTIFIED MANAGEMENT ACCOUNTANT (USA)</li>
                     </ul>
-                    <p>Prospire's CMA USA coaching program offers students the opportunity to become certified professionals. It equips them with both practical and theoretical knowledge in accounting and finance. Recent studies indicate that the most preferred industries for CMA USA professionals are...</p>
+                    <p>Prospire's CMA USA coaching program offers students the opportunity to become certified
+                      professionals. It equips them with both practical and theoretical knowledge in accounting and
+                      finance. Recent studies indicate that the most preferred industries for CMA USA professionals
+                      are...</p>
                     <div class="mt-10">
                       <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
                       <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
@@ -196,13 +202,16 @@
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
                     <h5 class="font-16 title"><a href="#">
-                      CMA INDIA
+                        CMA INDIA
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED MANAGEMENT ACCOUNTANT (INDIA)</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
-                    <p>Prospire's CMA India course focuses on building competence in students. The CMA certification, globally recognized for management accountants and financial professionals, sets the standard. This course provides specialized training in specific fields, preparing individuals for successful careers...</p>
+                    <p>Prospire's CMA India course focuses on building competence in students. The CMA certification,
+                      globally recognized for management accountants and financial professionals, sets the standard.
+                      This course provides specialized training in specific fields, preparing individuals for successful
+                      careers...</p>
                     <div class="mt-10">
                       <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
                       <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
@@ -220,13 +229,16 @@
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
                     <h5 class="font-16 title"><a href="#">
-                      EA
-                     </a></h5>
+                        EA
+                      </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i> ENROLLED AGENT</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
-                    <p>The Enrolled Agent (EA) designation, provided by Prospire, is a prestigious qualification for U.S. tax professionals. EAs are IRS-authorized experts who represent individuals, businesses, and organizations in tax matters. This credential signifies top-tier expertise in tax law, making it a valuable asset for those in need of tax-related services.</p>
+                    <p>The Enrolled Agent (EA) designation, provided by Prospire, is a prestigious qualification for
+                      U.S. tax professionals. EAs are IRS-authorized experts who represent individuals, businesses, and
+                      organizations in tax matters. This credential signifies top-tier expertise in tax law, making it a
+                      valuable asset for those in need of tax-related services.</p>
                     <div class="mt-10">
                       <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
                       <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
@@ -244,13 +256,16 @@
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
                     <h5 class="font-16 title"><a href="#">
-                      GST VAT
+                        BAT
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i>CERTIFIED GST VAT ACCOUNTANT</li>
+                      <li><i class="fa fa-calendar mr-5"></i>Business Accounting and Taxation (BAT) Course</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
-                    <p>The Certified GST VAT Accountant certification from Prospire is designed for professionals specializing in Goods and Services Tax (GST) and Value Added Tax (VAT). In many countries, GST and VAT are critical components of the tax system. This certification equips individuals with the expertise to manage compliance, calculations, and reporting related to these taxes. Certified GST VAT Accountants are experts in these tax systems, offering valuable support to businesses in navigating complex tax regulations and ensuring compliance...</p>
+                    <p>The Business Accounting and Taxation (BAT) course imparts fundamental knowledge in accounting,
+                      taxation, payroll policies, and economics. It equips students to manage organizations across
+                      sales, accounting, and taxation departments. Exploring key concepts is integral to understanding
+                      this program, highlighting its essential features for aspiring professionals...</p>
                     <div class="mt-10">
                       <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
                       <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
@@ -268,36 +283,45 @@
                   </div>
                   <div class="schedule-details clearfix p-15 pt-10">
                     <h5 class="font-16 title"><a href="#">
-                      ACCA IFRS
+                        CAT
+                      </a></h5>
+                    <ul class="list-inline font-11 mb-20">
+                      <li><i class="fa fa-calendar mr-5"></i>CERTIFIED ACCOUNTING TECHNICIAN</li>
+                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
+                    </ul>
+                    <p> Prospire's CAT program offers a robust foundation in accounting principles, financial
+                      management, taxation, and auditing. Our comprehensive curriculum ensures the acquisition of
+                      practical skills and knowledge crucial for a successful career in accounting and finance. Join
+                      Prospire and embark on a journey to become a Certified Accounting Technician...</p>
+                    <div class="mt-10">
+                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
+                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4">
+                <div class="schedule-box maxwidth500 bg-light mb-30">
+                  <div class="thumb">
+                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
+                    <div class="overlay">
+                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
+                    </div>
+                  </div>
+                  <div class="schedule-details clearfix p-15 pt-10">
+                    <h5 class="font-16 title"><a href="#">
+                        ACCA IFRS
                       </a></h5>
                     <ul class="list-inline font-11 mb-20">
                       <li><i class="fa fa-calendar mr-5"></i>CERTIFIED ACCA IFRS ACCOUNTANT</li>
                       <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
                     </ul>
-                    <p>The Certified ACCA IFRS Accountant program, provided by Prospire, is tailored for finance professionals seeking expertise in International Financial Reporting Standards (IFRS). This certification ensures a deep understanding of IFRS principles and their effective application. Certified ACCA IFRS Accountants are experts in financial reporting and international accounting standards, playing a vital role in ensuring accurate financial reporting and global compliance...</p>
-                    <div class="mt-10">
-                      <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
-                      <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4">
-                <div class="schedule-box maxwidth500 bg-light mb-30">
-                  <div class="thumb">
-                    <img class="img-fullwidth" alt="" src="images/mainimages/graduatestudent.jpg">
-                    <div class="overlay">
-                      <a href="#"><i class="fa fa-calendar mr-5"></i></a>
-                    </div>
-                  </div>
-                  <div class="schedule-details clearfix p-15 pt-10">
-                    <h5 class="font-16 title"><a href="#">Business Conferences 2023</a></h5>
-                    <ul class="list-inline font-11 mb-20">
-                      <li><i class="fa fa-calendar mr-5"></i> DEC 31/2016</li>
-                      <li><i class="fa fa-map-marker mr-5"></i> 89 KANNUR.</li>
-                    </ul>
-                    <p>Lorem ipsum dolor sit amet elit. Cum veritatis sequi nulla nihil, dolor voluptatum nemo adipisci
-                      eligendi! Sed nisi perferendis, totam harum dicta.</p>
+                    <p>Certified ACCA IFRS Accountant program is designed for finance professionals seeking
+                      expertise in International Financial Reporting Standards (IFRS). This certification ensures a deep
+                      understanding of IFRS principles and effective application. ACCA IFRS Accountants become experts
+                      in financial reporting, playing a vital role in ensuring accurate financial reporting and global
+                      compliance...
+                    </p>
                     <div class="mt-10">
                       <a class="btn btn-dark btn-theme-colored btn-sm mt-10" href="#">Register</a>
                       <a href="#" class="btn btn-dark btn-sm mt-10">Details</a>
@@ -318,59 +342,18 @@
         <div class="row border-bottom-black">
           <div class="col-sm-6 col-md-3">
             <div class="widget dark">
-              <img class="mt-10 mb-20" alt="" src="images/logo-wide-white.png">
-              <p>203, Envato Labs, Behind Alis Steet, Melbourne, Australia.</p>
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">123-456-789</a> </li>
+                    href="#">+91 9056666275</a> </li>
+
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">contact@yourdomain.com</a> </li>
+                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">www.yourdomain.com</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark">
-              <h5 class="widget-title mb-10">Call Us Now</h5>
-              <div class="text-gray">
-                +61 3 1234 5678 <br>
-                +12 3 1234 5678
-              </div>
-            </div>
-            <div class="widget dark">
-              <h5 class="widget-title mb-10">Opening Hours</h5>
-              <div class="opening-hours">
-                <ul class="list-border">
-                  <li class="clearfix"> <span> Mon - Fri :</span>
-                    <div class="value pull-right"> 8.00 am - 6.00 pm </div>
-                  </li>
-                  <li class="clearfix"> <span> Sun : </span>
-                    <div class="value pull-right"> Colosed </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark">
-              <h5 class="widget-title line-bottom">Useful Links</h5>
-              <ul class="list-border">
-                <li><a href="index-mp-layout1.html">Home</a></li>
-                <li><a href="page-about1.html">About us</a></li>
-                <li><a href="shortcode-sitemap.html">Sitemap</a></li>
-                <li><a href="page-faq-style1.html">Faq's</a></li>
-                <li><a href="page-contact1.html">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark mb-20">
-              <h5 class="widget-title line-bottom">Quick Contact</h5>
-              <ul class="list-border font-13">
-                <li><a href="#">+(012) 345 6789</a></li>
-                <li><a href="#">hello@yourdomain.com</a></li>
-                <li><a href="#" class="lineheight-20">121 King Street, Melbourne Victoria 3000, Australia</a></li>
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
             </div>
             <div class="widget dark">
@@ -384,6 +367,55 @@
                 <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
               </ul>
             </div>
+
+          </div>
+
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title line-bottom">Useful Links</h5>
+              <ul class="list-border">
+                <li><a href="/">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="404.html">career</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark mb-20">
+              <h5 class="widget-title line-bottom">Our Course</h5>
+              <ul class="list-border font-13">
+                <li><a href="cmausa.html">CMA USA</a></li>
+                <li><a href="cmaindia.html">CMA INDIA</a></li>
+                <li><a href="404.html">EA (Enrolled Agent)</a></li>
+                <li><a href="404.html">BAT </a></li>
+                <li><a href="404.html">CAT </a></li>
+                <li><a href="404.html">ACCA IFRS</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Call Us Now</h5>
+              <div class="text-gray">
+                +91 9056666275 <br>
+                +91 9056666275
+              </div>
+              <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
+              <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
+                <label class="display-block" for="mce-EMAIL"></label>
+                <div class="input-group">
+                  <input type="email" value="" name="EMAIL" placeholder="Your Email" class="form-control"
+                    data-height="37px" id="mce-EMAIL">
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn btn-colored btn-theme-colored m-0"><i
+                        class="fa fa-paper-plane-o text-white"></i></button>
+                  </span>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -391,25 +423,18 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="font-13 text-black-777 m-0"><a target="_blank" href="https://www.templateshub.net">Templates
-                  Hub</a></p>
-            </div>
-            <div class="col-md-6 text-right flip sm-text-center">
-              <div class="widget no-border m-0">
-                <ul class="styled-icons icon-dark icon-circled icon-sm">
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                  <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                </ul>
-              </div>
+              <p class="mb-4">
+                &copy;
+                <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
+                Reserved. Designed by
+                <a class="text-white border-bottom" href="https://wexorai.com/">WexorAI</a>
+              </p>
             </div>
           </div>
         </div>
       </div>
     </footer>
+
     <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
   </div>
   <!-- end wrapper -->
