--- a/blog.html
+++ b/blog.html
@@ -121,7 +121,10 @@
                       <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">GST VAT</a>
+                      <a href="404.html">BAT</a>
+                    </li>
+                    <li>
+                      <a href="404.html">CAT</a>
                     </li>
                     <li>
                       <a href="404.html">ACCA IFRS</a>
@@ -432,6 +435,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -443,8 +447,10 @@
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
                 <li><a href="404.html">EA (Enrolled Agent)</a></li>
-                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">BAT </a></li>
+                <li><a href="404.html">CAT </a></li>
                 <li><a href="404.html">ACCA IFRS</a></li>
+
               </ul>
             </div>
           </div>
