--- a/cmaindia.html
+++ b/cmaindia.html
@@ -98,7 +98,10 @@
                       <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">GST VAT</a>
+                      <a href="404.html">BAT</a>
+                    </li>
+                    <li>
+                      <a href="404.html">CAT</a>
                     </li>
                     <li>
                       <a href="404.html">ACCA IFRS</a>
@@ -252,10 +255,12 @@
                               <div class="styled-select">
                                 <select id="booking_service" name="booking_service" class="form-control" required="">
                                   <option value="">- Select Your Courses -</option>
+                                  <option value="">- Select Your Courses -</option>
                                   <option value="Accounting Technoloiges">CMA USA</option>
                                   <option value="Chemical Engineering">CMA INDIA</option>
                                   <option value="Computer Technologies">Enrollment Agent</option>
-                                  <option value="Development Studies">GST VAT</option>
+                                  <option value="Development Studies">BAT</option>
+                                  <option value="Development Studies">CAT</option>
                                   <option value="Electrical & Electronic">ACCA IFRS</option>
                                 </select>
                               </div>
@@ -543,7 +548,8 @@
                       <li><a href="cmausa.html">CMA USA</a></li>
                       <li class="active"><a href="cmaindia.html">CMA INDIA</a></li>
                       <li><a href="404.html">ENROLLED AGENT</a></li>
-                      <li><a href="404.html">GST VAT</a></li>
+                      <li><a href="404.html">BAT</a></li>
+                      <li><a href="404.html">CAT</a></li>
                       <li><a href="404.html">ACCA</a></li>
                     </ul>
                   </div>
@@ -598,6 +604,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -609,8 +616,10 @@
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
                 <li><a href="404.html">EA (Enrolled Agent)</a></li>
-                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">BAT </a></li>
+                <li><a href="404.html">CAT </a></li>
                 <li><a href="404.html">ACCA IFRS</a></li>
+
               </ul>
             </div>
           </div>
