--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,10 @@
                       <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">GST VAT</a>
+                      <a href="404.html">BAT</a>
+                    </li>
+                    <li>
+                      <a href="404.html">CAT</a>
                     </li>
                     <li>
                       <a href="404.html">ACCA IFRS</a>
@@ -232,7 +235,8 @@
                           <option value="Accounting Technoloiges">CMA USA</option>
                           <option value="Chemical Engineering">CMA INDIA</option>
                           <option value="Computer Technologies">Enrollment Agent</option>
-                          <option value="Development Studies">GST VAT</option>
+                          <option value="Development Studies">BAT</option>
+                          <option value="Development Studies">BAT</option>
                           <option value="Electrical & Electronic">ACCA IFRS</option>
                         </select>
                       </div>
@@ -341,6 +345,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -352,8 +357,10 @@
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
                 <li><a href="404.html">EA (Enrolled Agent)</a></li>
-                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">BAT </a></li>
+                <li><a href="404.html">CAT </a></li>
                 <li><a href="404.html">ACCA IFRS</a></li>
+
               </ul>
             </div>
           </div>
