--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
                       <a href="404.html">EA (Enrolled Agent)</a>
                     </li>
                     <li>
-                      <a href="404.html">GST VAT</a>
+                      <a href="404.html">BAT</a>
+                    </li>
+                    <li>
+                      <a href="404.html">CAT</a>
                     </li>
                     <li>
                       <a href="404.html">ACCA IFRS</a>
@@ -563,9 +566,8 @@
                   EXPLORE Our <span class="text-theme-color-2"> Courses</span>
                 </h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Rem autem<br />
-                  voluptatem obcaecati!
+                  Discover transformative learning journeys with our diverse range of skill-enhancing <br />
+                  and career-focused courses.
                 </p>
               </div>
             </div>
@@ -697,16 +699,17 @@
                     </div>
                     <div class="project-details p-15 pt-10 pb-10">
                       <h5 class="font-14 font-weight-500 mb-5">
-                        CERTIFIED GST VAT ACCOUNTANT
+                        Business Accounting and Taxation (BAT) Course
                       </h5>
                       <h4 class="font-weight-700 text-uppercase mt-0">
                         <a href="404.html">
-                          GST VAT</a>
+                          BAT</a>
                       </h4>
                       <p>
-                        Prospire's Certified GST VAT Accountant: for tax professionals mastering GST and VAT. Expertise
-                        in compliance, calculations, and reporting for businesses' success.
-                      </p>
+
+                        BAT offers vital accounting, taxation, payroll, and economic knowledge for diverse
+                        organizational management. Explore key features to gain Business Accounting and Taxation
+                        insights.</p>
                       <ul class="list-inline project-conditions text-center m-0 p-10">
                         <li class="current-fund">
                           <strong>Eligibility</strong>+2 Above
@@ -715,12 +718,50 @@
                           <strong>Exam</strong>1 Papper
                         </li>
                         <li class="remaining-days">
-                          <strong>Duration</strong>3 Months
+                          <strong>Duration</strong>3-6 Months
                         </li>
                       </ul>
                     </div>
                   </div>
                 </div>
+                <div class="item">
+                  <div class="project mb-30 border-2px">
+                    <div class="thumb">
+                      <img class="img-fullwidth" alt="" src="images/project/p4.jpg" />
+                      <div class="hover-link">
+                        <a class="btn btn-flat btn-dark btn-theme-colored btn-md pull-left font-20"
+                          href="404.html"><span>click
+                            to explore</span>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="project-details p-15 pt-10 pb-10">
+                      <h5 class="font-14 font-weight-500 mb-5">
+                        Certified Accounting Technician
+                      </h5>
+                      <h4 class="font-weight-700 text-uppercase mt-0">
+                        <a href="404.html">
+                          CAT</a>
+                      </h4>
+                      <p>
+                        CAT, globally recognized, equips for success in accounting and finance. Administered by
+                        prestigious bodies, ensuring excellence in diverse accounting roles.
+                      </p>
+                      <ul class="list-inline project-conditions text-center m-0 p-10">
+                        <li class="current-fund">
+                          <strong>Eligibility</strong>+ 2
+                        </li>
+                        <li class="target-fund">
+                          <strong>Exam</strong>three Level
+                        </li>
+                        <li class="remaining-days">
+                          <strong>Duration</strong>6 months
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+
                 <div class="item">
                   <div class="project mb-30 border-2px">
                     <div class="thumb">
@@ -1255,7 +1296,8 @@
                             <option value="Accounting Technoloiges">CMA USA</option>
                             <option value="Chemical Engineering">CMA INDIA</option>
                             <option value="Computer Technologies">Enrollment Agent</option>
-                            <option value="Development Studies">GST VAT</option>
+                            <option value="Development Studies">BAT</option>
+                            <option value="Development Studies">CAT</option>
                             <option value="Electrical & Electronic">ACCA IFRS</option>
                           </select>
                         </div>
@@ -1357,6 +1399,7 @@
                 <li><a href="about.html">About us</a></li>
                 <li><a href="404.html">career</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -1368,7 +1411,8 @@
                 <li><a href="cmausa.html">CMA USA</a></li>
                 <li><a href="cmaindia.html">CMA INDIA</a></li>
                 <li><a href="404.html">EA (Enrolled Agent)</a></li>
-                <li><a href="404.html">GST VAT</a></li>
+                <li><a href="404.html">BAT </a></li>
+                <li><a href="404.html">CAT </a></li>
                 <li><a href="404.html">ACCA IFRS</a></li>
               </ul>
             </div>
