faq changed in the cmaindia

--- a/cmaindia.html
+++ b/cmaindia.html
@@ -421,7 +421,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion12" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>What are the career opportunities for CMAs in India?</a>
+                          <span class="open-sub"></span>CMA career opportunities in India?</a>
                       </div>
                       <div id="accordion12" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -436,7 +436,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion13" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>How long does it take to become a CMA in India?</a>
+                          <span class="open-sub"></span>Timeframe for becoming CMA India?</a>
                       </div>
                       <div id="accordion13" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -466,7 +466,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion15" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>Are there any specific electives in the CMA India program? </a>
+                          <span class="open-sub"></span>Specific electives in CMA India program? </a>
                       </div>
                       <div id="accordion15" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -481,8 +481,8 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion16" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>What are the advantages of studying CMA at Prospire in South
-                          India?</a>
+                          <span class="open-sub"></span>Advantages of studying CMA at Prospire?
+                          ?</a>
                       </div>
                       <div id="accordion16" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -497,8 +497,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion17" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>Is there a difference between the CMA program in India and other
-                          countries? </a>
+                          <span class="open-sub"></span>Differences in CMA programs worldwide? </a>
                       </div>
                       <div id="accordion17" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -513,7 +512,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion18" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>What is the demand for CMAs in government sectors in India?</a>
+                          <span class="open-sub"></span>CMA demand in Indian government jobs?</a>
                       </div>
                       <div id="accordion18" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
@@ -528,8 +527,7 @@
                       <div class="panel-title">
                         <a data-parent="#accordion1" data-toggle="collapse" href="#accordion19" class=""
                           aria-expanded="true">
-                          <span class="open-sub"></span>Can I pursue a CMA in India after completing my higher secondary
-                          education? </a>
+                          <span class="open-sub"></span>Can I pursue CMA India after high school? </a>
                       </div>
                       <div id="accordion19" class="panel-collapse collapse" role="tablist" aria-expanded="true">
                         <div class="panel-content">
